# 2026-ASMC

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
R_KR_PG_KATRI/: crosswalk_set.json  global_info.json  lane_node_set.json  node_set.json  surface_marking_set.json  synced_traffic_light_set.json  traffic_sign_set.json
config/: morai_bridge.env
docker/perception-train/: Dockerfile  docker-compose.yaml  requirements-train.txt
docker/ros-noetic/: Dockerfile  docker-compose.yaml  requirements-grpc.txt  requirements-lbc.txt  requirements-mgeo.txt
docs/: README.md  architecture-overview.md  collaboration.md  competition-data.md  competition-environment.md  development-environment.md  docker-guide.md  getting-started.md  git-workflow.md  integration-plan.md  morai-msgs-beta-policy.md  morai-msgs-versions.md  planning-behavior-handoff.md  repository-layout.md  sim-verification-checklist.md  team-dev-guide.md
mgeo_toolkit/: morai_map_toolkit.py  morai_map_toolkit_tutorial.ipynb
mgeo_toolkit/data/KATRI/: node_set.json  road_mesh_out_line.json
scripts/: asmc_env.sh  bridge.sh  build_ws.sh  clone-external.sh  diagnose_morai_bridge.sh  docker_perception_up.sh  docker_ros_up.sh  wait_morai_topic.sh
src/: CMakeLists.txt
src/behavior_planner/: CMakeLists.txt  behavior_planner_guide.docx  package.xml
src/behavior_planner/launch/: behavior_node.launch
src/behavior_planner/msg/: BehaviorContext.msg  PlanFeedback.msg  UrbanFeatureDebug.msg
src/behavior_planner/scripts/: behavior_dashboard_server.py  open_dashboard.py
src/behavior_planner/src/: main.cpp
src/behavior_planner/src/config/: behavior_params.yaml  global_info.json  node_set.json  route_links.yaml  route_links_1.yaml  traffic_light_mock.yaml
src/behavior_planner/src/context/: behavior_context.hpp  behavior_types.hpp  msg_converter.cpp  msg_converter.hpp
src/behavior_planner/src/decision/: behavior_decision.cpp  behavior_decision.hpp  behavior_scorer.cpp  behavior_scorer.hpp  fsm.cpp  fsm.hpp  state.hpp  transition_condition.cpp  transition_condition.hpp
src/behavior_planner/src/feature/: feature_builder.cpp  feature_builder.hpp  object_projector.cpp  object_projector.hpp  urban_feature.hpp
src/behavior_planner/src/global/: data_logger.cpp  data_logger.hpp  global.hpp  utils.cpp  utils.hpp
src/behavior_planner/src/map/: link_info.hpp  mgeo_loader.cpp  mgeo_loader.hpp  route_manager.cpp  route_manager.hpp  stop_line_info.hpp
src/behavior_planner/src/node/: behavior_node.cpp  behavior_node.hpp  morai_msg_converter.cpp  morai_msg_converter.hpp
src/behavior_planner/src/rule/: hard_rule_filter.cpp  hard_rule_filter.hpp
src/behavior_planner/src/signal/: mock_traffic_light_provider.cpp  mock_traffic_light_provider.hpp  traffic_light_provider.hpp
src/behavior_planner/src/visualization/: behavior_visualization.cpp  behavior_visualization.hpp
src/behavior_planner/test/: behavior_logic_test.cpp
src/behavior_planner/web/: dashboard.css  dashboard.js  index.html
src/integration/: README.md
src/integration_launch/: CMakeLists.txt  package.xml
src/integration_launch/launch/: integration.launch
src/interfaces/: README.md
src/learning/: README.md
src/learning_by_cheating/: README_LBC_BEV.md  autonomous_driving.py  collect_bev.sh  collect_data.sh  dataset_v2.py  preprocessing.py  train.py  train_v2.py
src/learning_by_cheating/config/: lbc_bev.rviz
src/learning_by_cheating/lbc_bev/: __init__.py  coordinates.py  diagnostics.py  dynamic_layers.py  intersection_tables.py  map_baker.py  morai_adapters.py  morai_vehicle.py  renderer.py  spec.py  static_layers.py  ws_root.py
src/learning_by_cheating/model/: pa_model.py
src/learning_by_cheating/scripts/: hd_map_crop_ver2.py  lbc_bev_collector.py  lbc_bev_diagnose.py  lbc_bev_visualizer.py  lbc_env.sh  run_lbc_diagnose.sh  start_lbc_imshow.sh  start_lbc_morai.sh  start_lbc_rviz.sh  start_lbc_snapshot.sh  verify_lbc_colors.py  verify_lbc_spec.py
src/mpc_controller/: CMakeLists.txt  package.xml
src/mpc_controller/launch/: mpc_node.launch
src/mpc_controller/src/: main.cpp
src/mpc_controller/src/config/: mpc_params.yaml  path_route1.txt
src/mpc_controller/src/constraints/: constraints.cpp  constraints.hpp
src/mpc_controller/src/cost/: cost_function.cpp  cost_function.hpp
src/mpc_controller/src/global/: global.cpp  global.hpp  parameter_loader.cpp  parameter_loader.hpp  utils.cpp  utils.hpp
src/mpc_controller/src/model/: vehicle_model.cpp  vehicle_model.hpp
src/mpc_controller/src/node/: mpc_node.cpp  mpc_node.hpp
src/mpc_controller/src/planner/: path_planner.cpp  path_planner.hpp
src/mpc_controller/src/solver/: mpc_solver.cpp  mpc_solver.hpp
src/perception/: README.md
src/perception/morai_3d_detection/: .dockerignore  .gitignore  Dockerfile  SETUP_NOTES.md  analyze_dataset_distribution.py  anchor_generator.py  build_frame_groups.py  camera_configs.py  costmap.py  debug_overfit_one_batch.py  decoder.py  eval_distance.py  extract_images.py  inference.py  loss_calculator.py  make_kmeans.py  mgeo_to_static_labels.py  morai_3d_label_generator.py  morai_3d_live.py  morai_dataset.py  requirements.txt  resnet_fpn.py  scan_bad_jpegs.py  sensor_settings  static_decoder.py  train.py  verify_lidar_camera_overlay.py  visualize_camera_proj.py  visualize_pred_fixed.py
src/planner/: CMakeLists.txt  package.xml
src/planner/launch/: planner_node.launch
src/planner/src/: main.cpp
src/planning_control/: README.md
tools/: README.md
tools/aim_scenario_runner/: README.md  requirements.txt  run.sh  scenario_base.py  scenario_launcher.py  senario_readme.md
tools/aim_scenario_runner/config/: local_override.yaml.example  runtime.yaml  saved_ego_positions.yaml  urban_route_links.yaml  urban_scenarios.yaml
tools/aim_scenario_runner/tools/: build_zone_link_set.py  save_ego_pose.py  spawn_saved_ego_poses.py  test_spawnpoint_desired_speed.py
tools/aim_scenario_runner/utils/: geometry_utils.py  (+10 more)
tools/grpc_inha_univ/: README.md  requirements.txt  run_mode.sh
(+172 files in other folders)
