<?xml version="1.0"?>
<package format="2">
  <name>behavior_planner</name><version>0.1.0</version>
  <description>Rule and FSM based urban behavior context publisher.</description>
  <maintainer email="autonav@todo.todo">autonav</maintainer><license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend><depend>std_msgs</depend><depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend><depend>morai_msgs</depend><depend>yaml-cpp</depend>
  <exec_depend>message_runtime</exec_depend>
  <export/>
</package>
