<?xml version="1.0"?>
<package format="2">
  <name>mpc_node</name>
  <version>0.3.0</version>
  <description>
    Model Predictive Control (MPC) based trajectory tracking for autonomous vehicles.
    Replaces the lattice planner (PlanningControl) using a kinematic bicycle model,
    projected gradient descent solver with Armijo line search, and a longitudinal PID.
  </description>

  <maintainer email="autonav@example.com">AutoNav Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>morai_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
